BS-8073, add a folder in bonita-home with jars for compiling business data