@@ -30,8 +30,12 @@
 
 		<bonita.home>${jboss.home}/bonita</bonita.home>
 		<if.task>net.sf.antcontrib.logic.IfTask</if.task>
+
+		<cargo.jvmargs>-Xms1024m -Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</cargo.jvmargs>
+		<!-- -Xdebug -->
+		<!-- -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8787 -Xnoagent -Djava.compiler=NONE -->
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>ant-contrib</groupId>
@@ -45,13 +49,13 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-	
+
 	<profiles>
 		<profile>
-	      <id>tests</id>
-	      <activation>
-	      	<activeByDefault>true</activeByDefault>
-	      </activation>
+			<id>tests</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
@@ -67,7 +71,7 @@
 								<inherited>false</inherited>
 								<configuration>
 									<target>
-									<taskdef name="if" classname="${if.task}" classpathref="maven.runtime.classpath" />
+										<taskdef name="if" classname="${if.task}" classpathref="maven.runtime.classpath" />
 										<available property="jboss.present" file="${jboss.zip.folder}/${jboss.name}.zip" />
 										<if>
 											<not>
@@ -77,8 +81,8 @@
 												<get src="${jboss.url}" dest="${jboss.zip.folder}/${jboss.name}.zip" />
 											</then>
 										</if>
-										<unzip dest="${project.build.directory}" src="${env.HOME}/${jboss.name}.zip" />
-																				
+										<unzip dest="${project.build.directory}" src="${jboss.zip.folder}/${jboss.name}.zip" />
+
 										<property name="bindings.xml" location="${jboss.conf.dir}/bindingservice.beans/META-INF/bindings-jboss-beans.xml" />
 										<replace file="${bindings.xml}" token="&lt;property name=&quot;port&quot;&gt;1099&lt;/property&gt;" value="&lt;property name=&quot;port&quot;&gt;${provider.port}&lt;/property&gt;" />
 										<replace file="${bindings.xml}" token="&lt;property name=&quot;port&quot;&gt;4444&lt;/property&gt;" value="&lt;property name=&quot;port&quot;&gt;0&lt;/property&gt;" />
@@ -86,62 +90,66 @@
 										<replace file="${bindings.xml}" token="&lt;property name=&quot;port&quot;&gt;4445&lt;/property&gt;" value="&lt;property name=&quot;port&quot;&gt;0&lt;/property&gt;" />
 										<replace file="${bindings.xml}" token="&lt;property name=&quot;port&quot;&gt;4446&lt;/property&gt;" value="&lt;property name=&quot;port&quot;&gt;0&lt;/property&gt;" />
 										<replace file="${bindings.xml}" token="&lt;property name=&quot;port&quot;&gt;8083&lt;/property&gt;" value="&lt;property name=&quot;port&quot;&gt;0&lt;/property&gt;" />
-		
-										<replace file="${jboss.conf.dir}/jboss-service.xml" token="&lt;attribute name=&quot;DefaultCacheTimeout&quot;&gt;1800&lt;/attribute&gt;" value="&lt;attribute name=&quot;DefaultCacheTimeout&quot;&gt;0&lt;/attribute&gt;" />
-										<replace file="${jboss.conf.dir}/jboss-service.xml" token="&lt;attribute name=&quot;DefaultCacheResolution&quot;&gt;60&lt;/attribute&gt;" value="&lt;attribute name=&quot;DefaultCacheResolution&quot;&gt;0&lt;/attribute&gt;" />
+
+										<replace file="${jboss.conf.dir}/jboss-service.xml" token="&lt;attribute name=&quot;DefaultCacheTimeout&quot;&gt;1800&lt;/attribute&gt;"
+											value="&lt;attribute name=&quot;DefaultCacheTimeout&quot;&gt;0&lt;/attribute&gt;" />
+										<replace file="${jboss.conf.dir}/jboss-service.xml" token="&lt;attribute name=&quot;DefaultCacheResolution&quot;&gt;60&lt;/attribute&gt;"
+											value="&lt;attribute name=&quot;DefaultCacheResolution&quot;&gt;0&lt;/attribute&gt;" />
 										<replace file="${jboss.conf.dir}/jboss-service.xml" token="&lt;attribute name=&quot;CallByValue&quot;&gt;false&lt;/attribute&gt;" value="&lt;attribute name=&quot;CallByValue&quot;&gt;true&lt;/attribute&gt;" />
 										<!-- Workaround JBoss bug: https://issues.jboss.org/browse/JBAS-6981 -->
 										<replace file="${jboss.conf.dir}/bootstrap/profile.xml"
-										token="&lt;constructor&gt;&lt;parameter&gt;&lt;inject bean=&quot;BootstrapProfileFactory&quot; property=&quot;attachmentStoreRoot&quot; /&gt;&lt;/parameter&gt;&lt;/constructor&gt;"
-										value="&lt;constructor&gt;&lt;parameter class=&quot;java.io.File&quot;&gt;&lt;inject bean=&quot;BootstrapProfileFactory&quot; property=&quot;attachmentStoreRoot&quot; /&gt;&lt;/parameter&gt;&lt;/constructor&gt;" />
-		
+											token="&lt;constructor&gt;&lt;parameter&gt;&lt;inject bean=&quot;BootstrapProfileFactory&quot; property=&quot;attachmentStoreRoot&quot; /&gt;&lt;/parameter&gt;&lt;/constructor&gt;"
+											value="&lt;constructor&gt;&lt;parameter class=&quot;java.io.File&quot;&gt;&lt;inject bean=&quot;BootstrapProfileFactory&quot; property=&quot;attachmentStoreRoot&quot; /&gt;&lt;/parameter&gt;&lt;/constructor&gt;" />
+
 										<replace file="${jboss.deploy.dir}ers/ear-deployer-jboss-beans.xml" token="&lt;property name=&quot;isolated&quot;&gt;false&lt;/property&gt;"
 											value="&lt;property name=&quot;isolated&quot;&gt;true&lt;/property&gt;" />
 										<replace file="${jboss.deploy.dir}ers/ear-deployer-jboss-beans.xml" token="&lt;property name=&quot;callByValue&quot;&gt;false&lt;/property&gt;"
 											value="&lt;property name=&quot;callByValue&quot;&gt;true&lt;/property&gt;" />
-		
+
 										<replace file="${jboss.deploy.dir}/ejb3-connectors-jboss-beans.xml" token="&lt;parameter&gt;3873&lt;/parameter&gt;" value="&lt;parameter&gt;${invokerLocatorPort}&lt;/parameter&gt;" />
-		
+
 										<replace file="${jboss.deploy.dir}/jbossweb.sar/server.xml" token="port=&quot;8080&quot;" value="port=&quot;${jboss.web.port}&quot;" />
 										<replace file="${jboss.deploy.dir}/jbossweb.sar/server.xml" token="port=&quot;8009&quot;" value="port=&quot;${jboss.ajp.port}&quot;" />
-		
+
 										<replace file="${jboss.home}/bin/run.conf" token="-XX:MaxPermSize=256m" value="-XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError" />
-										
+
 										<copy todir="${jboss.deploy.dir}" file="${distrib.dir}/ear/ejb3/bonita-deploy-ear3-sp${bonita.version}-${project.version}.ear" />
-		
+
 										<copy todir="${jboss.deploy.dir}">
 											<fileset dir="jboss/server/default/deploy">
 												<include name="*xml" />
 											</fileset>
 										</copy>
-										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.ip#" value="${database.ip}"/>
-										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.port#" value="${database.port}"/>
-										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.user#" value="${database.user}"/>
-										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.password#" value="${database.password}"/>
-										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.name#" value="${database.name}"/>
+										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.ip#" value="${database.ip}" />
+										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.port#" value="${database.port}" />
+										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.user#" value="${database.user}" />
+										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.password#" value="${database.password}" />
+										<replace file="${jboss.deploy.dir}/postgres-ds.xml" token="#database.name#" value="${database.name}" />
 										<copy todir="${jboss.lib.dir}">
 											<fileset dir="target/driver">
 												<include name="*jar" />
 											</fileset>
 										</copy>
-										
+
 										<!-- Create default bonita.home folder -->
 										<copy todir="${bonita.home}" verbose="true">
 											<fileset dir="${distrib.dir}/resources/home/" />
 										</copy>
-																						
+
 										<copy file="${basedir}/client/bonita-client.properties" todir="${bonita.home}/client/conf" overwrite="true" />
-										<replace file="${bonita.home}/client/conf/bonita-client.properties" token="#provider.port#" value="${provider.port}"/>
-										
+										<replace file="${bonita.home}/client/conf/bonita-client.properties" token="#provider.port#" value="${provider.port}" />
+
 										<!-- Change Dialect of BDR -->
 										<replaceregexp file="${bonita.home}/server/platform/tenant-template/conf/bonita-server.properties" match="businessdata.hibernate.dialect=.*"
-                                            replace="businessdata.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect" byline="true" />
-										
-										
+											replace="businessdata.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect" byline="true" />
+										<replace file="${bonita.home}/server/platform/tenant-template/conf/bonita-server.properties" token="org.bonitasoft.engine.persistence.JNDIBitronixJtaPlatform"
+											value="org.hibernate.service.jta.platform.internal.JBossStandAloneJtaPlatform" failOnNoReplacements="true" />
+										<replace file="${bonita.home}/server/platform/tenant-template/conf/bonita-server.properties" token="java:comp/env/" value=""
+											failOnNoReplacements="true" />
+
 										<copy todir="${bonita.home}/server/licenses" failonerror="true">
 											<fileset dir="${user.home}/lic" includes="*.lic" />
 										</copy>
-										
 									</target>
 								</configuration>
 							</execution>
@@ -183,7 +191,7 @@
 											<fileset dir="${report.xml}" includes="TEST-*.xml" />
 											<report todir="${report.results}" />
 										</junitreport>
-		
+
 										<copy todir="${surefire.reports}">
 											<fileset dir="${report.xml}" />
 										</copy>
@@ -233,6 +241,7 @@
 									<cargo.jboss.configuration>default</cargo.jboss.configuration>
 									<cargo.servlet.port>${jboss.web.port}</cargo.servlet.port>
 									<cargo.rmi.port>${provider.port}</cargo.rmi.port>
+									<cargo.jvmargs>${cargo.jvmargs}</cargo.jvmargs>
 								</properties>
 							</configuration>
 							<wait>false</wait>
@@ -243,8 +252,8 @@
 		</profile>
 		<!-- the profile package-all is declared here only to deactivate the profile tests (active by default) -->
 		<profile>
-	      <id>package-all</id>
-	    </profile>
+			<id>package-all</id>
+		</profile>
 	</profiles>
 
 </project>
